# rust-nvm

./: .gitignore  Cargo.toml  LICENSE  README.md
example-scripts/: ord.toy  square.toy
src/: main.rs  test.rs  tests.rs  util.rs
src/frontend/: analysis.rs  ast.rs  codegen.rs  mod.rs  parser.rs
src/vm/: bytecode.rs  machine.rs  mod.rs
